test/error/sema/unwrapped-cant-be-mutable.dsk
struct S
    x: int
end

func f(x: ?S) -> void
    if x: mut y then
        echo(y.x)
    end
end
